# python-template

./: .copier-answers.yml  .dockerignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cookiecutter.json  copier.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml
docs/: mkdocs.yaml
hooks/: post_gen_project.sh  pre_gen_project.sh
src/: .envrc  .pre-commit-config.yaml  CONTRIBUTING.md  README.md.jinja  macros.jinja  postgenerate.sh.jinja  pyproject.toml.jinja  setup.cfg  {% if docker %}.dockerignore{% endif %}  {% if docker %}Dockerfile{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
src/.github/: dependabot.yaml
src/.github/workflows/: automerge.yaml  ci.yaml.jinja  {% if docs %}docs.yaml{% endif %}
src/project_name/: __init__.py
src/src/{{project_name}}/: {% if not private %}py.typed{% endif %}
src/tests/: test_{{project_name}}.py
src/{% if docs %}docs{% endif %}/: mkdocs.yaml.jinja
{{cookiecutter.project_slug}}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
