[project]
name = "project-name"
version = "0.1.0"
description = "Project name"
readme = "README.md"
authors = [{ name = "Branch Vincent", email = "branchevincent@gmail.com" }]
requires-python = ">=3.10,<4.0"
dependencies = []
urls.repository = "https://github.com/branchvincent/project-name"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1"
mkdocs-material = ">=9"
mypy = ">=1"
pre-commit = ">=4"
pytest = ">=8"
ruff = ">=0.11"
taskipy = ">=1"

[tool.taskipy.tasks]
clean = { cmd = "rm -rf .*_cache/ dist/", help = "Remove build artifacts" }
docs = { cmd = "mkdocs serve -f docs/mkdocs.yaml", help = "Serve documentation"}
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest", help = "Run tests" }

[tool.ruff]
fix = true
lint = { select = ["B", "E", "F", "I", "SIM", "UP"] }

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
