[project]
name = "project-name"
version = "0.1.0"
description = "Project name"
readme = "README.md"
authors = [{ name = "Branch Vincent", email = "branchevincent@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
urls.repository = "https://github.com/branchvincent/project-name"
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
docs = ["mkdocs", "mkdocs-material"]
dev = ["prek", "pytest", "ruff", "taskipy", "ty"]

[tool.taskipy.tasks]
clean = { cmd = "rm -rf .*_cache/ dist/", help = "Remove build artifacts" }
docs = { cmd = "mkdocs serve -f docs/mkdocs.yaml", help = "Serve documentation"}
lint = { cmd = "prek run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest", help = "Run tests" }

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
fix = true
lint = { select = ["B", "E", "F", "I", "SIM", "UP"] }

[tool.ty]
environment = { python-platform = "all" }
terminal = { output-format = "concise" }

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
